--- a/controlit.css
+++ b/controlit.css
@@ -12,6 +12,7 @@
 
     margin: auto;
     display: inline-block;
+    z-index: 2;
 }
 
 h3{
@@ -28,4 +29,51 @@ footer{
     position: absolute;
     font-family: 'Montserrat', sans-serif;
     display: inline-block;
+}
+
+#masking{
+    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0s, opacity 0.5s linear;
+}
+
+#masking.hidden{
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#masking.shown{
+    display: block;
+    background-color: rgba(0,0,0,0.7);
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+    visibility: visible;
+    opacity: 1;
+}
+
+#infodiv{
+    width: 480px;
+    height: 370px;
+    background-color: #d6d6d6;
+    border-radius: 10px;
+    position: absolute;
+    top:-4%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
+    display: inline-block;
+}
+
+img{
+    margin-left: 2%;
+    padding-left: 2%;
+    padding-bottom: 2%;
 }
