--- a/controlit.css
+++ b/controlit.css
@@ -32,20 +32,20 @@ footer{
 }
 
 #masking{
-    display: none;
+    /*display: none;*/
     opacity: 0;
     visibility: hidden;
-    transition: visibility 0s, opacity 0.5s linear;
 }
 
 #masking.hidden{
-    display: none;
+    /*display: none;*/
     visibility: hidden;
     opacity: 0;
+    transition: visibility 0s 2s, opacity 2s linear;
 }
 
 #masking.shown{
-    display: block;
+    /*display: block;*/
     background-color: rgba(0,0,0,0.7);
     width: 100%;
     height: 100%;
@@ -55,6 +55,7 @@ footer{
     left: 0;
     visibility: visible;
     opacity: 1;
+    transition: opacity 2s linear;
 }
 
 #infodiv{
@@ -77,3 +78,5 @@ img{
     padding-left: 2%;
     padding-bottom: 2%;
 }
+
+tbody > tr { cursor: pointer; }
